--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.2",
     "antd": "^5.27.6",
+    "axios": "^1.13.1",
     "echarts": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
